CV: removed compile errors.

--- a/CV/mlh/cv.tex
+++ b/CV/mlh/cv.tex
@@ -59,7 +59,7 @@ UK
 
 \cvheading{Franz Miltz} % Large heading - your name
 
-\cvsubheading{Undergraduate Computer Science Student} % Subheading - your occupation/specialization
+\cvsubheading{Undergraduate CS+Maths Student} % Subheading - your occupation/specialization
 
 %----------------------------------------------------------------------------------------
 %	ABOUT ME
@@ -79,7 +79,7 @@ UK
 
 %------------------------------------------------
 
-\CVItem{2019-present, University of Edinburgh}{BSc Hons Computer Science}
+\CVItem{2019-present, The University of Edinburgh}{BSc Hons Computer Science and Mathematics}
 
 %------------------------------------------------
 
@@ -102,7 +102,7 @@ UK
 
 
 \CVItem{Bundeswettbewerb Informatik\\
-(German competitive programming competition)}{
+(German programming competition)}{
 \begin{itemize}
 	\item 36th (2017/18): qualification for second round
 	\item 37th (2018/19): qualification for second round
@@ -138,8 +138,8 @@ UK
 
 \CVItem{Programming Languages}
 {\begin{itemize}
-	\item practical experience: Go, Python, Java, C\#
-	\item theoretical knowledge: C, C++, Rust, Haskell
+	\item practical experience: Go, Rust, Python, Java, C\#
+	\item theoretical knowledge: C, C++, Haskell
 \end{itemize}}
 \CVItem{Operating Systems}{
 \begin{itemize}
