Fixed titles for CAP and ILA

--- a/YEAR1/SEM1/ILA/exam-notes/notes.tex
+++ b/YEAR1/SEM1/ILA/exam-notes/notes.tex
@@ -60,6 +60,7 @@
 \author{Franz Miltz}
 \date{December 01, 2019}
 \maketitle
+\tableofcontents
 \section{Vectors}
 \subsection{The Geometry and Algebra of Vectors}
 \begin{theorem}
