--- a/YEAR1/SEM2/CAP/notes/notes.tex
+++ b/YEAR1/SEM2/CAP/notes/notes.tex
@@ -44,6 +44,7 @@
 \begin{document}
 \title{Calculus and its Applications (SEM2)}
 \author{Franz Miltz}
+\date{May 28, 2020}
 \maketitle
 \tableofcontents
 \section{Functions and models}
