Fixed bad formatting

--- a/YEAR2/SEM1/SVCDE/notes.tex
+++ b/YEAR2/SEM1/SVCDE/notes.tex
@@ -107,7 +107,7 @@
     The length $L$ of the curve traced out by the position vector function $\vec r(t)$ in three-dimensional space ove the interval
     $[a,b]$ is given by
     \begin{align*}
-        L = \int_a^b \left|\vec r'(t)\right| dt
+        L = \int_a^b \left|\frac{d\vec r(t)}{dt}\right| dt
     \end{align*}
 \end{theorem}
 \subsection{Curvature}
