--- a/template/notes.tex
+++ b/template/notes.tex
@@ -1,7 +1,7 @@
 \documentclass{article}
 \usepackage[a4paper]{geometry}
 \geometry{tmargin=3cm, bmargin=3cm, lmargin=2cm, rmargin=2cm}
-\usepackage{babel}
+\usepackage[british]{babel}
 \usepackage{amsmath}
 \usepackage{amssymb}
 \usepackage{amsthm}
