--- a/YEAR2/SEM1/SVCDE/H1/homework.tex
+++ b/YEAR2/SEM1/SVCDE/H1/homework.tex
@@ -97,7 +97,7 @@ Let
   \dv r(t) = t\ih + \frac{4}{3}t^{3/2}\jh + \frac{1}{2}t^2\kh
 \end{align*}
 be a position vector function. 
-Then the length $L$ of the curve for $0\leq t \leq 2$ is given by
+Then the length $L$ of the curve traced out by $\vec r$ for $0\leq t \leq 2$ is given by
 \begin{align*}
   L = \int_0^2 \left|\dv r(t)\right|dt.
 \end{align*}
